--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -13,7 +13,8 @@ node {
    }
    stage('docker build/push') {
      docker.withRegistry('https://index.docker.io/v2/', 'dockerhub') {
-       def app = docker.build("alisaleh55555/nodjs-jenkins-demo:${commit_id}", '.').push()
+       def app = docker.build("alisaleh55555/nodjs-jenkins-demo:${commit_id}", '.')
+        sh 'docker push alisaleh55555/nodjs-jenkins-demo:${commit_id}'
      }
    }
 }
