--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -14,9 +14,8 @@ node {
    stage('docker build/push') {
      docker.withRegistry('https://index.docker.io/v2/', 'dockerhub') {
        def app = docker.build("alisaleh55555/nodjs-jenkins-demo:${commit_id}", '.')
-        enviroment {com='$commit_id'}
-        sh 'echo $com'
-        sh 'docker push alisaleh55555/nodjs-jenkins-demo:${com}'
+        sh 'echo $commit_id'
+        //sh 'docker push alisaleh55555/nodjs-jenkins-demo:${com}'
      }
    }
 }
